--- a/base.css
+++ b/base.css
@@ -296,3 +296,11 @@ ul.pixel-text{
   50%  { transform: translateY(calc(-1 * var(--float-distance))); }
   100% { transform: translateY(0); }
 }
+
+section{
+    width: 100%;
+    display: flex; flex-direction: column; align-items: center;
+}
+.grid{
+    display: grid; gap: 16px 10px;;
+}
